# Polaris

./: .gitignore  Cargo.toml  README.md  clippy.toml  package-lock.json  package.json  rustfmt.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/windows/: hooks.nsi  installer.nsi
