[workspace]
resolver = "2"
members = [
    "src-tauri"
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
dbg_macro = "warn"
print_stdout = "warn"
too_many_lines = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
