[package]
name = "polaris"
version = "1.0.0"
description = "Polaris Background Monitor"
authors = ["CosmoArtsStore"]
edition = "2021"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.4", features = [] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_ToolHelp"
] }
winreg = "0.52"
dirs = "6.0"
